Mood Shop - Stretch Challenge and Bug Fixing

--- a/Class Work/Mood Shop/Resources/CSS/styles.css
+++ b/Class Work/Mood Shop/Resources/CSS/styles.css
@@ -46,3 +46,7 @@ body {
     text-align: center;
     width: 100%;
 }
+
+* {
+    list-style: none;
+}
